--- a/Views/Shared/_LayoutHomePage.cshtml
+++ b/Views/Shared/_LayoutHomePage.cshtml
@@ -50,8 +50,23 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-        <div class="page-name">
+    @*<footer>
+            <div class="page-name">
+                <p class="font-weight-light h4 ml-5 float-left">ASP BlogCorner</p>
+                <ul class="list-inline float-right ml-3">
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Home</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Blog</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">What's Trending !!</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Experiences</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">About The BlogCorner</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </footer>*@
+
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
             <p class="font-weight-light h4 ml-5 float-left">ASP BlogCorner</p>
             <ul class="list-inline float-right ml-3">
                 <li class="list-inline-item h5 font-weight-light"><a href="#">Home</a></li>
@@ -67,7 +82,6 @@
 
 
 
-    
     <script src="~/js/app.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
