--- a/Views/Pages/Experiences.cshtml
+++ b/Views/Pages/Experiences.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Extrnal CSS -->
-    <link rel="stylesheet" href="~/BlogSpot/css/Blog/style.css">
+    <link rel="stylesheet" href="~/BlogSpot/css/Experiences/style.css">
 
     <title>ASP BlogCorner</title>
     <link rel="icon" type="image/png" href="~/Images/logo1.png" />
@@ -25,9 +25,9 @@
 
     <div class="page">
         <div id="logo" class="mt-5 float-left">
-            <img src="~/BlogSpot/images/Blog/logo2.png" alt="ASP" id="logo1">
+            <img src="~/BlogSpot/images/Experiences/logo2.png" alt="ASP" id="logo1">
             <p class="site-title mt-2 h3 font-weight-bold">
-                <a href="https://getbootstrap.com/docs/4.0/utilities/text/" id="title-logo" target="_blank">ASP BlogCorner</a>
+                <a href="../index.html" id="title-logo" target="_blank">ASP BlogCorner</a>
             </p>
             <p class="site-description font-weight-light h5 text-uppercase">Write Your Hear Out!!</p>
         </div>
@@ -47,43 +47,35 @@
 
     <div class="blog-content">
         <div class="blog-header">
-            <h2 class="text-center font-weight-bold">Blog</h2>
+            <h2 class="text-center font-weight-bold">Experiences</h2>
             <hr id="mid">
         </div>
-        <div class="blog-body">
+        <div class="whtr-blog-body">
 
-            <!-- Blog 1 -->
-            <div class="blog-one">
-                <img src="~/BlogSpot/images/Blog/blog_one.jpg" alt="Blog One Image" style="margin-left: 35%;">
-                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">A Series to Remember...</h3></a>
+            <!-- Experiences Blog 1 -->
+            <div class="exp-blog-one">
+                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">All You Need is a Passport</h3></a>
+                <img src="~/BlogSpot/images/Experiences/exp_blog_one.jpg" alt="Blog One Image" style="margin-left: 25%;width:800px;">
                 <blockquote class="blockquote">
-                    <p style="margin-left: 25%; margin-right: 25%;">It was the Australian summer of 2018-19 when a full-strength Indian team visited Down Under and won their first ever Test series in Australia by completely outplaying their opponents in every facet of the game. Virat Kohli-led team became the first Asian team to win a Test series in Australia and as expected, the entire....</p>
+                    <p style="margin-left: 25%; margin-right: 25%;">I am sure you have understood from the title itself what this post is going to be about. We all dream during our growing up days about making an international trip with our friends. We usually make a top 10 places to visit list and start saving money and planning for it. Just like the</p>
                 </blockquote>
                 <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
-                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Aditya  <span style="margin-left: 3%;">21st March 2021</span></p>
+                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Aditya  <span style="margin-left: 3%;">6th February 2021</span></p>
             </div>
 
-            <!-- Blog 2 -->
-            <div class="blog-two mt-5">
-                <img src="~/BlogSpot/images/Blog/blog_two.png" alt="Blog One Image" style="margin-left: 35%;">
-                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">Top Netflix Documentaries</h3></a>
+            <!-- Experiences Blog 2 -->
+            <div class="exp-blog-two">
+                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">WFH Life – The New Normal</h3></a>
+                <img src="~/BlogSpot/images/Experiences/exp_blog_two.jpg" alt="Blog One Image" style="margin-left: 25%;width:800px;">
                 <blockquote class="blockquote">
-                    <p style="margin-left: 25%; margin-right: 25%;">We are all attracted to fiction. Fictional stories and characters provide us with an escape from the real world. Be it Hollywood or Bollywood or any other regional film industry, we have abundance of fictional classics that never get old. However, thanks to the online streaming platforms, documentaries have created their own niche documentaries have</p>
+                    <p style="margin-left: 25%; margin-right: 25%;">If we go back a couple of months or may be a year, all of us really envied our colleagues who worked from the comfort of their homes. We, the unfortunate ones, envisioned ourselves working from home, expecting it would help us in maintaining a proper work-life balance. Now, lets come back to the current</p>
                 </blockquote>
                 <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
-                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Sminal  <span style="margin-left: 3%;">4th April 2021</span></p>
+                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Arnold  <span style="margin-left: 3%;">26th March 2021</span></p>
             </div>
 
-            <!-- Blog 3 -->
-            <div class="blog-three mt-5">
-                <img src="~/BlogSpot/images/Blog/blog_three.jpg" alt="Blog One Image" style="margin-left: 35%;height:320px;">
-                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">A Personal Struggle</h3></a>
-                <blockquote class="blockquote">
-                    <p style="margin-left: 25%; margin-right: 25%;">How often have we asked ourselves in the last few months – “Is this the worst year ever?” We have seen the deadly coronavirus crush various countries in the world and destructive cyclones cause mass damage. We have also witnessed the passing away of several public figures, some of which still feels like a personal</p>
-                </blockquote>
-                <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
-                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Payal  <span style="margin-left: 3%;">10th April 2021</span></p>
-            </div>
+
+
         </div>
     </div>
     <br>
@@ -92,7 +84,7 @@
     <!-- Subscribe Section -->
     <div class="subscribe-section">
         <div class="subscribe-header">
-            <h2 class="text-center">Follow My Blog</h2>
+            <h2 class="text-center">Follow My Experiences Blog</h2>
             <p class="text-center h5">Get new content delivered directly to your inbox.</p>
         </div>
         <div class="subscribe-form" style="margin-left: 25%; margin-right: 25%;">
@@ -125,7 +117,7 @@
 
 
     <!-- External JS -->
-    <script src="~/BlogSpot/js/Blog/app.js"></script>
+    <script src="~/BlogSpot/js/Experiences/app.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
