--- a/Views/Shared/_LayoutHomePage.cshtml
+++ b/Views/Shared/_LayoutHomePage.cshtml
@@ -35,10 +35,10 @@
         </div>
         <div class="float-left mr-auto" id="listNav">
             <ul class="list-inline">
-                <li class="list-inline-item font-weight-bold h5"><a href="./index.html">Home</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="./Blog/blogs.html">Blog</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="./WHTR/whtr.html">What's Trending !!</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="./Experiences/experiences.html">Experiences</a></li>
+                <li class="list-inline-item font-weight-bold h5"><a href="/HomePage/Index">Home</a></li>
+                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Blog">Blog</a></li>
+                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
+                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="#">About The BlogCorner</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="#">Contact</a></li>
             </ul>
