--- a/Views/Shared/_LayoutHomePage.cshtml
+++ b/Views/Shared/_LayoutHomePage.cshtml
@@ -39,8 +39,8 @@
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Blog">Blog</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="#">About The BlogCorner</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="#">Contact</a></li>
+                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Contact">Contact</a></li>
+                <li class="list-inline-item font-weight-bold h5"><a href="#">Login</a></li>
             </ul>
         </div>
     </div>
