--- a/Views/Pages/Experiences.cshtml
+++ b/Views/Pages/Experiences.cshtml
@@ -15,115 +15,118 @@
 
     <!-- Extrnal CSS -->
     <link rel="stylesheet" href="~/BlogSpot/css/Experiences/style.css">
-
     <title>ASP BlogCorner</title>
     <link rel="icon" type="image/png" href="~/Images/logo1.png" />
 </head>
 <body>
+    <!-- LOADER HERE  -->
+    <div id="loading">
+        <img src="~/Images/calculating2.gif" alt="Calculating">
+    </div>
 
     <button id="myBtn" title="Top">Top</button>
-
-    <div class="page">
-        <div id="logo" class="mt-5 float-left">
-            <img src="~/BlogSpot/images/Experiences/logo2.png" alt="ASP" id="logo1">
-            <p class="site-title mt-2 h3 font-weight-bold">
-                <a href="../index.html" id="title-logo" target="_blank">ASP BlogCorner</a>
-            </p>
-            <p class="site-description font-weight-light h5 text-uppercase">Write Your Hear Out!!</p>
-        </div>
-        <div class="float-left mr-auto" id="listNav">
-            <ul class="list-inline">
-                <li class="list-inline-item font-weight-bold h5"><a href="/HomePage/Index">Home</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Blog">Blog</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Contact">Contact</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="#">Login</a></li>
-            </ul>
-        </div>
-    </div>
-    <br>
-    <hr id="start">
-
-    <div class="blog-content">
-        <div class="blog-header">
-            <h2 class="text-center font-weight-bold">Experiences</h2>
-            <hr id="mid">
-        </div>
-        <div class="whtr-blog-body">
-
-            <!-- Experiences Blog 1 -->
-            <div class="exp-blog-one">
-                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">All You Need is a Passport</h3></a>
-                <img src="~/BlogSpot/images/Experiences/exp_blog_one.jpg" alt="Blog One Image" style="margin-left: 25%;width:800px;">
-                <blockquote class="blockquote">
-                    <p style="margin-left: 25%; margin-right: 25%;">I am sure you have understood from the title itself what this post is going to be about. We all dream during our growing up days about making an international trip with our friends. We usually make a top 10 places to visit list and start saving money and planning for it. Just like the</p>
-                </blockquote>
-                <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
-                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Aditya  <span style="margin-left: 3%;">6th February 2021</span></p>
+    <div id="content-body" style="display:none">
+        <div class="page">
+            <div id="logo" class="mt-5 float-left">
+                <img src="~/BlogSpot/images/Experiences/logo2.png" alt="ASP" id="logo1">
+                <p class="site-title mt-2 h3 font-weight-bold">
+                    <a href="../index.html" id="title-logo" target="_blank">ASP BlogCorner</a>
+                </p>
+                <p class="site-description font-weight-light h5 text-uppercase">Write Your Hear Out!!</p>
             </div>
-
-            <!-- Experiences Blog 2 -->
-            <div class="exp-blog-two">
-                <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">WFH Life – The New Normal</h3></a>
-                <img src="~/BlogSpot/images/Experiences/exp_blog_two.jpg" alt="Blog One Image" style="margin-left: 25%;width:800px;">
-                <blockquote class="blockquote">
-                    <p style="margin-left: 25%; margin-right: 25%;">If we go back a couple of months or may be a year, all of us really envied our colleagues who worked from the comfort of their homes. We, the unfortunate ones, envisioned ourselves working from home, expecting it would help us in maintaining a proper work-life balance. Now, lets come back to the current</p>
-                </blockquote>
-                <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
-                <p class="h5 font-weight-light" style="margin-left: 25%;"> by Arnold  <span style="margin-left: 3%;">26th March 2021</span></p>
+            <div class="float-left mr-auto" id="listNav">
+                <ul class="list-inline">
+                    <li class="list-inline-item font-weight-bold h5"><a href="/HomePage/Index">Home</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Blog">Blog</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Contact">Contact</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="#">Login</a></li>
+                </ul>
             </div>
-
-
-
         </div>
-    </div>
-    <br>
-    <hr id="end">
+        <br>
+        <hr id="start">
 
-    <!-- Subscribe Section -->
-    <div class="subscribe-section">
-        <div class="subscribe-header">
-            <h2 class="text-center">Follow My Experiences Blog</h2>
-            <p class="text-center h5">Get new content delivered directly to your inbox.</p>
-        </div>
-        <div class="subscribe-form" style="margin-left: 25%; margin-right: 25%;">
-            <form>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="txtemail" aria-describedby="emailHelp">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <div class="blog-content">
+            <div class="blog-header">
+                <h2 class="text-center font-weight-bold">Experiences</h2>
+                <hr id="mid">
+            </div>
+            <div class="whtr-blog-body">
+
+                <!-- Experiences Blog 1 -->
+                <div class="exp-blog-one">
+                    <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">All You Need is a Passport</h3></a>
+                    <img src="~/BlogSpot/images/Experiences/exp_blog_one.jpg" alt="Blog One Image" style="margin-left: 25%;width:800px;">
+                    <blockquote class="blockquote">
+                        <p style="margin-left: 25%; margin-right: 25%;">I am sure you have understood from the title itself what this post is going to be about. We all dream during our growing up days about making an international trip with our friends. We usually make a top 10 places to visit list and start saving money and planning for it. Just like the</p>
+                    </blockquote>
+                    <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
+                    <p class="h5 font-weight-light" style="margin-left: 25%;"> by Aditya  <span style="margin-left: 3%;">6th February 2021</span></p>
                 </div>
-                <button type="submit" class="btn btn-outline-danger" id="mybtn">Subscribe</button>
-            </form>
+
+                <!-- Experiences Blog 2 -->
+                <div class="exp-blog-two">
+                    <a href="#"><h3 class="font-weight-bold" style="margin-left: 25%; margin-top: 1%;">WFH Life – The New Normal</h3></a>
+                    <img src="~/BlogSpot/images/Experiences/exp_blog_two.jpg" alt="Blog One Image" style="margin-left: 25%;width:800px;">
+                    <blockquote class="blockquote">
+                        <p style="margin-left: 25%; margin-right: 25%;">If we go back a couple of months or may be a year, all of us really envied our colleagues who worked from the comfort of their homes. We, the unfortunate ones, envisioned ourselves working from home, expecting it would help us in maintaining a proper work-life balance. Now, lets come back to the current</p>
+                    </blockquote>
+                    <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
+                    <p class="h5 font-weight-light" style="margin-left: 25%;"> by Arnold  <span style="margin-left: 3%;">26th March 2021</span></p>
+                </div>
+
+
+
+            </div>
         </div>
+        <br>
+        <hr id="end">
+
+        <!-- Subscribe Section -->
+        <div class="subscribe-section">
+            <div class="subscribe-header">
+                <h2 class="text-center">Follow My Experiences Blog</h2>
+                <p class="text-center h5">Get new content delivered directly to your inbox.</p>
+            </div>
+            <div class="subscribe-form" style="margin-left: 25%; margin-right: 25%;">
+                <form>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="txtemail" aria-describedby="emailHelp">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <button type="submit" class="btn btn-outline-danger" id="mybtn">Subscribe</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="page-name">
+                <p class="font-weight-light h4 ml-5 float-left">ASP BlogCorner</p>
+                <ul class="list-inline float-right ml-3">
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Home</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Blog</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">What's Trending !!</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Experiences</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">About The BlogCorner</a></li>
+                    <li class="list-inline-item h5 font-weight-light"><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="page-name">
-            <p class="font-weight-light h4 ml-5 float-left">ASP BlogCorner</p>
-            <ul class="list-inline float-right ml-3">
-                <li class="list-inline-item h5 font-weight-light"><a href="#">Home</a></li>
-                <li class="list-inline-item h5 font-weight-light"><a href="#">Blog</a></li>
-                <li class="list-inline-item h5 font-weight-light"><a href="#">What's Trending !!</a></li>
-                <li class="list-inline-item h5 font-weight-light"><a href="#">Experiences</a></li>
-                <li class="list-inline-item h5 font-weight-light"><a href="#">About The BlogCorner</a></li>
-                <li class="list-inline-item h5 font-weight-light"><a href="#">Contact</a></li>
-            </ul>
-        </div>
-    </footer>
 
 
+        <!-- External JS -->
+        <script src="~/BlogSpot/js/Experiences/app.js"></script>
 
+        <!-- Option 2: Separate Popper and Bootstrap JS -->
 
-    <!-- External JS -->
-    <script src="~/BlogSpot/js/Experiences/app.js"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
 </body>
 </html>
