--- a/wwwroot/BlogSpot/css/WhatsTrending/style.css
+++ b/wwwroot/BlogSpot/css/WhatsTrending/style.css
@@ -120,3 +120,9 @@ a {
     margin-left: 40%;
     margin-bottom: 2%;
 }
+
+#loading {
+    display: none;
+    margin-left: 22%;
+    margin-top: 4%;
+}
