--- a/Views/Pages/Contact.cshtml
+++ b/Views/Pages/Contact.cshtml
@@ -38,8 +38,35 @@
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Contact">Contact</a></li>
-                <li class="list-inline-item font-weight-bold h5"><a href="#">Login</a></li>
+                <li class="list-inline-item font-weight-bold h5" data-toggle="modal" data-target="#exampleModal" id="myLogin"><a href="#">Login</a></li>
             </ul>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="txtId">User Id</label>
+                            <input type="email" class="form-control" id="txtId" aria-describedby="emailHelp" placeholder="Enter UserId">
+                        </div>
+                        <div class="form-group">
+                            <label for="txtPwd">Password</label>
+                            <input type="password" class="form-control" id="txtPwd" placeholder="Password">
+                        </div>
+                        <a href="/Admin/Index" class="float-left"><p>Forgot Password</p></a>
+                        <a href="/Register/Index" target="_blank" class="float-right">New User(Click here)</a>
+                        <br />
+                        <br />
+                        <div class="text-center">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Login</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <br>
