--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>@ViewData["Title"] </title>
     <link rel="icon" type="image/png" href="~/Images/logo1.png" />
-    <link href="~/AdminLib/css/styles.css" rel="stylesheet" />
+    <link href="~/BlogSpot/AdminLib/css/styles.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 </head>
@@ -151,13 +151,13 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="~/AdminLib/js/scripts.js"></script>
+    <script src="~/BlogSpot/AdminLib/js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="~/AdminLib/assets/demo/chart-area-demo.js"></script>
-    <script src="~/AdminLib/assets/demo/chart-bar-demo.js"></script>
+    <script src="~/BlogSpot/AdminLib/assets/demo/chart-area-demo.js"></script>
+    <script src="~/BlogSpot/AdminLib/assets/demo/chart-bar-demo.js"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
-    <script src="~/AdminLib/assets/demo/datatables-demo.js"></script>
+    <script src="~/BlogSpot/AdminLib/assets/demo/datatables-demo.js"></script>
 </body>
 </html>
 
