Aditya CM(Check Push)

--- a/Views/Pages/UserRegistration.cshtml
+++ b/Views/Pages/UserRegistration.cshtml
@@ -82,7 +82,7 @@
                 <hr id="mid">
             </div>
             <div class="whtr-blog-body">
-
+                <!-- This line is written by Aditya Patel(Owner) -->  
                 <!-- Write code in this area-->
                 <!-- start -->
                 <form>
