--- a/Views/HomePage/Index.cshtml
+++ b/Views/HomePage/Index.cshtml
@@ -20,6 +20,7 @@
     <link rel="icon" type="image/png" href="~/Images/logo1.png" />
 </head>
 <body>
+    <!-- This comment line is written by Sminal -->
     <!-- This is comment line is written by Payal -->
     <button id="myBtn" title="Top">Top</button>
     <!-- Header -->
