--- a/Views/Pages/UserRegistration.cshtml
+++ b/Views/Pages/UserRegistration.cshtml
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
     <!-- Extrnal CSS -->
-    <link rel="stylesheet" href="~/BlogSpot/css/WhatsTrending/style.css">
+    <link rel="stylesheet" href="~/BlogSpot/css/UserRegistration/style.css">
 
     <title>ASP BlogCorner</title>
     <link rel="icon" type="image/png" href="~/Images/logo1.png" />
@@ -75,69 +75,93 @@
         </div>
         <br>
         <hr id="start">
-
         <div class="blog-content">
             <div class="blog-header">
                 <h2 class="text-center font-weight-bold">User Registration Form</h2>
                 <hr id="mid">
             </div>
-            <div class="whtr-blog-body">
-                <!-- This line is written by Aditya Shreeprakash Patel(Owner) -->  
-                <!-- Write code in this area-->
-                <!-- start -->
+            <div class="register-body">
                 <form>
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlSelect1">Example select</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlSelect2">Example multiple select</label>
-                        <select multiple class="form-control" id="exampleFormControlSelect2">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <div class="row">
+
+                            <!-- First Name -->
+                            <div class="col-md-4">
+                                <label for="txtFName" class="font-weight-bold">First Name</label>
+                                <input type="text" class="form-control is-invalid" id="txtFName">
+                            </div>
+                            
+                            <!-- Middle Name -->
+                            <div class="col-md-4">
+                                <label for="txtMName" class="font-weight-bold">Middle Name</label>
+                                <input type="text" class="form-control is-valid" id="txtMName">
+                            </div>
+                            
+                            <!-- Last Name -->
+                            <div class="col-md-4">
+                                <label for="txtLName" class="font-weight-bold">Last Name</label>
+                                <input type="text" class="form-control is-invalid" id="txtLName">
+                            </div>
+                        </div>
+
+                        <div class="row mt-4">
+
+                            <!-- Add Blogging Name -->
+                            <div class="col-md-3">
+                                <label for="txtLName" class="font-weight-bold">Enter Public Blogging Name</label>
+                                <input type="text" class="form-control is-valid" id="txtPBName">
+                            </div>
+
+                            <!-- Phone Number -->
+                            <div class="col-md-3">
+                                <label for="txtTel" class="font-weight-bold">Enter Phone Number</label>
+                                <input type="tel" class="form-control is-invalid" id="txtTel" />
+                            </div>
+
+                            <!-- Age -->
+                            <div class="col-md-3">
+                                <label for="txtAge" class="font-weight-bold">Enter Age</label>
+                                <input type="text" class="form-control is-invalid" id="txtAge">
+                            </div>
+
+                            <!-- DoB -->
+                            <div class="col-md-3">
+                                <label for="lblDob" class="font-weight-bold">Enter Date Of Birth</label>
+                                <input class="form-control is-valid" type="date" id="txtDob">
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+
+                            <!-- User Name -->
+                            <div class="col-md-4">
+                                <label for="txtUSRName" class="font-weight-bold">Enter Username</label>
+                                <input type="text" class="form-control is-valid" id="txtUSRName">
+                            </div>
+
+                            <!-- Password Name -->
+                            <div class="col-md-4">
+                                <label for="txtPwd" class="font-weight-bold">Enter Password</label>
+                                <input type="password" class="form-control is-valid" id="txtPwd">
+                            </div>
+
+                            <!-- Confirm Name -->
+                            <div class="col-md-4">
+                                <label for="txtCnfPwd" class="font-weight-bold">Confirm Password</label>
+                                <input type="password" class="form-control is-invalid" id="txtCnfPwd">
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            <div class="col text-center">
+                                <button type="reset" class="btn btn-danger" id="myBtnReset">Reset</button>
+                                <button type="submit" class="btn btn-success ml-2" id="myBtnSubmit">Submit</button>
+                            </div>
+                        </div>
                     </div>
                 </form>
                 <!-- end -->
             </div>
         </div>
         <br>
-        <hr id="end">
-
-        <!-- Subscribe Section -->
-        <div class="subscribe-section">
-            <div class="subscribe-header">
-                <h2 class="text-center">Follow My Trending Blog</h2>
-                <p class="text-center h5">Get new content delivered directly to your inbox.</p>
-            </div>
-            <div class="subscribe-form" style="margin-left: 25%; margin-right: 25%;">
-                <form>
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="txtemail" aria-describedby="emailHelp">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <button type="submit" class="btn btn-outline-danger" id="mybtn">Subscribe</button>
-                </form>
-            </div>
-        </div>
-
         <!-- Footer -->
         <footer>
             <div class="page-name">
@@ -154,16 +178,11 @@
         </footer>
     </div>
 
-
-
     <!-- External JS -->
-    <script src="~/BlogSpot/js/WhatsTrending/app.js"></script>
-
+    <script src="~/BlogSpot/js/UserRegistration/app.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-
 </body>
 </html>
