Aditya CM(CreateBlog)

--- a/Views/Pages/UserRegistration.cshtml
+++ b/Views/Pages/UserRegistration.cshtml
@@ -16,7 +16,7 @@
     <!-- Extrnal CSS -->
     <link rel="stylesheet" href="~/BlogSpot/css/UserRegistration/style.css">
 
-    <title>ASP BlogCorner</title>
+    <title>User Registration</title>
     <link rel="icon" type="image/png" href="~/Images/logo1.png" />
 </head>
 <body>
