Aditya CM(Login)

--- a/Views/Pages/CreateBlog.cshtml
+++ b/Views/Pages/CreateBlog.cshtml
@@ -47,6 +47,8 @@
                     <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Blog">Blog</a></li>
                     <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
                     <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="#" class="text-primary">Welcome User12466</a></li>
+                    <li class="list-inline-item font-weight-bold h5"><a href="/HomePage/Index" class="text-danger">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -62,7 +64,7 @@
                 <div id="editor-container">
                 </div>
                 <div class="mt-3 text-center">
-                    <button type="button" class="btn btn-success" id="btnSubmit">Submit</button>
+                    <button type="button" class="btn btn-success" id="btnSubmit">Post</button>
                     <button type="button" class="btn btn-danger ml-2" id="btnClear">Clear</button>
                 </div>
 
