--- a/Views/Pages/Contact.cshtml
+++ b/Views/Pages/Contact.cshtml
@@ -41,7 +41,7 @@
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/WhatsTrending">What's Trending !!</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Experiences">Experiences</a></li>
                 <li class="list-inline-item font-weight-bold h5"><a href="/Pages/Contact">Contact</a></li>
-                <li class="list-inline-item font-weight-bold h5" data-toggle="modal" data-target="#exampleModal" id="myLogin"><a href="#">Login</a></li>
+                <!--<li class="list-inline-item font-weight-bold h5" data-toggle="modal" data-target="#exampleModal" id="myLogin"><a href="#">Login</a></li>-->
             </ul>
         </div>
     </div>
