--- a/Views/Pages/Experiences.cshtml
+++ b/Views/Pages/Experiences.cshtml
@@ -66,7 +66,7 @@
                             <br />
                             <div class="text-center">
                                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Login</button>
+                                <button type="button" class="btn btn-primary" id="lgBtn">Login</button>
                             </div>
                         </form>
                     </div>
