Aditya CM(Linked Registration)

--- a/Views/Pages/WhatsTrending.cshtml
+++ b/Views/Pages/WhatsTrending.cshtml
@@ -61,8 +61,8 @@
                                 <label for="txtPwd">Password</label>
                                 <input type="password" class="form-control" id="txtPwd" placeholder="Password">
                             </div>
-                            <a href="/Admin/Index" class="float-left"><p>Forgot Password</p></a>
-                            <a href="/Register/Index" target="_blank" class="float-right">New User(Click here)</a>
+                            <a href="#" class="float-left"><p>Forgot Password</p></a>
+                            <a href="/Pages/UserRegistration" target="_blank" class="float-right">New User(Click here)</a>
                             <br />
                             <br />
                             <div class="text-center">
