Aditya CM(ShowBlog)

--- a/Views/Pages/Blog.cshtml
+++ b/Views/Pages/Blog.cshtml
@@ -90,7 +90,7 @@
                     <blockquote class="blockquote">
                         <p style="margin-left: 25%; margin-right: 25%;">It was the Australian summer of 2018-19 when a full-strength Indian team visited Down Under and won their first ever Test series in Australia by completely outplaying their opponents in every facet of the game. Virat Kohli-led team became the first Asian team to win a Test series in Australia and as expected, the entire....</p>
                     </blockquote>
-                    <a href="#"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
+                    <a href="/Pages/ShowBlog"><p class="h5" style="margin-left: 25%;">Continue Reading...</p></a>
                     <p class="h5 font-weight-light" style="margin-left: 25%;"> by Aditya  <span style="margin-left: 3%;">21st March 2021</span></p>
                 </div>
 
